Add repository link and README to cargo.toml

--- a/scoped-gc/Cargo.toml
+++ b/scoped-gc/Cargo.toml
@@ -2,6 +2,8 @@
 name = "scoped-gc"
 version = "0.1.0"
 authors = ["Charles Samborski <demurgos@demurgos.net>"]
+repository = "https://github.com/open-flash/rust-scoped-gc"
+readme = "../README.md"
 
 [lib]
 name = "scoped_gc"
