--- a/scoped-gc/Cargo.toml
+++ b/scoped-gc/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Charles Samborski <demurgos@demurgos.net>"]
 description = "Derive plugin for the `scoped-gc` crate"
 repository = "https://github.com/open-flash/rust-scoped-gc"
 readme = "../README.md"
-license = "AGPL-3.0-or-later"
+license = "AGPL-3.0"
 license-file = "../LICENSE.md"
 
 [lib]
